[project]
name = "tiny-moa"
version = "0.1.0"
description = "Tiny MoA (Mixture of Agents) PoC - AI Legion for the GPU Poor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "gyunggyung"}
]
keywords = ["ai", "llm", "agents", "mixture-of-agents", "cpu", "lightweight"]

dependencies = [
    # Core - llama.cpp Python bindings
    "llama-cpp-python>=0.3.0",
    # Hugging Face
    "huggingface-hub>=0.25.0",
    # Utilities
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    # Tool Calling
    "requests>=2.31.0",
    "duckduckgo-search>=8.1.1",
    "tzdata>=2025.3",
    "docling>=2.69.1",
    "pypdfium2>=5.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=5.2.0",
    "kiwipiepy>=0.22.2",
    "deep-translator>=1.11.4",
    "nltk>=3.9.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
# 번역 기능
translation = [
    "googletrans==4.0.0-rc1",
    "langdetect>=1.0.9",
]

# 문서 변환 (Docling)
docling = [
    "docling>=0.1.0",
]

# RAG 시스템
rag = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
]

# 웹 검색
search = [
    "duckduckgo-search>=6.0",
]

# 개발 도구
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

# 전체 기능
all = [
    "googletrans==4.0.0-rc1",
    "langdetect>=1.0.9",
    "docling>=0.1.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "duckduckgo-search>=6.0",
]

[project.scripts]
tiny-moa = "tiny_moa.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_moa", "src/tools", "src/translation"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
